# python-keystoneclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING  HACKING.rst  MANIFEST.in  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  other-requirements.txt  policy.json  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  rules
doc/: Makefile  requirements.txt
doc/ext/: apidoc.py
doc/source/: authentication-plugins.rst  conf.py  index.rst  middlewarearchitecture.rst  releases.rst  shell.rst  using-api-v2.rst  using-api-v3.rst  using-api.rst  using-sessions.rst
doc/source/man/: keystone.rst
doc/source/ref/: exceptions.rst  index.rst  (+2 more)
docs/: Makefile  api.rst  conf.py  index.rst  shell.rst
docs/ref/: client.rst  endpoints.rst  index.rst  roles.rst  tenants.rst  users.rst
examples/pki/: gen_cmsz.py  gen_pki.sh  run_all.sh
keystoneclient/: __init__.py  _discover.py  access.py  adapter.py  base.py  baseclient.py  client.py  discover.py  exceptions.py  httpclient.py  i18n.py  service_catalog.py  session.py  shell.py  utils.py
keystoneclient/apiclient/: __init__.py  exceptions.py
keystoneclient/auth/: __init__.py  base.py  cli.py  conf.py  token_endpoint.py
keystoneclient/common/: cms.py
keystoneclient/fixture/: __init__.py  discovery.py  exception.py  v2.py  v3.py
keystoneclient/generic/: __init__.py  client.py  shell.py
keystoneclient/hacking/: checks.py
keystoneclient/middleware/: auth_token.py  memcache_crypt.py  s3_token.py  test.py
keystoneclient/tests/: client_fixtures.py  fakes.py  test_auth_token_middleware.py  test_base.py  test_cms.py  test_discovery.py  test_ec2utils.py  test_fixtures.py  test_hacking_checks.py  test_http.py  test_https.py  test_keyring.py  test_memcache_crypt.py  test_s3_token_middleware.py  test_session.py  test_shell.py  test_utils.py  utils.py
keystoneclient/v2_0/: __init__.py  certificates.py  client.py  ec2.py  endpoints.py  extensions.py  policies.py  roles.py  services.py  shell.py  tenants.py  tokens.py  users.py
keystoneclient/v3/: __init__.py  access_rules.py  application_credentials.py  auth.py  client.py  credentials.py  domain_configs.py  domains.py  ec2.py  endpoint_groups.py  endpoints.py  groups.py  limits.py  policies.py  projects.py  regions.py  registered_limits.py  role_assignments.py  roles.py  services.py  system.py  tokens.py  users.py
playbooks/: run-ds-tox.yaml
playbooks/keystoneclient-dsvm-functional/: run.yaml
releasenotes/notes/: Add-allow-expired-flag-to-validate-25b8914f4deb359b.yaml  add-support-for-limits-6f883d6d3054a500.yaml  add-support-for-registered-limits-d83b888ea65a614b.yaml  bp-application-credentials-27728ded876d7d5a.yaml  bp-domain-config-9566e672a98f4e7f.yaml  bp-pci-dss-query-password-expired-users-b0c4b1bbdcf33f16.yaml  bp-whitelist-extension-for-app-creds-d03526e52e3edcce.yaml  bug-1615076-26962c85aeaf288c.yaml  bug-1616105-cc8b85eb056e99e2.yaml  bug-1641674-4862454115265e76.yaml  bug-1654847-d2e9df994c7b617f.yaml  deprecated_auth-d2a2bf537bdb88d3.yaml  drop-py-2-7-5ac18e82de83fcfa.yaml  implied_roles-ea39d3c3d998d482.yaml  ksc_2.1.0-739ded9c4c3f8aaa.yaml  list_projects_filtered_by_the_parent_project-a873974f197c1e37.yaml  list_role_assignment_names-7e1b7eb8c2d22d7c.yaml  project-tags-1f8a32d389951e7a.yaml  remove-credentials-data-46ab3c3c248047cf.yaml  remove-middleware-eef8c40117b465aa.yaml  remove_apiclient_exceptions-0cd5c8d16aa09a22.yaml  remove_apiclient_exceptions-6580003a885db286.yaml  remove_cli-d2c4435ba6a09b79.yaml  removed-generic-client-ff505b2b01bc9302.yaml  return-request-id-to-caller-97fa269ad626f8c1.yaml  switch-default-interface-v3-dcd7167196ace531.yaml
releasenotes/source/: conf.py  index.rst  ocata.rst  train.rst
tests/: client_fixtures.py  fakes.py  test_access.py  test_auth_token_middleware.py  test_base.py  test_client.py  test_ec2utils.py  test_http.py  test_https.py  test_keyring.py  test_memcache_crypt.py  test_service_catalog.py  test_shell.py  test_utils.py  utils.py
tests/apiclient/: test_exceptions.py
tests/v2_0/: client_fixtures.py  fakes.py  test_access.py  test_auth.py  test_client.py  test_discovery.py  test_ec2.py  test_endpoints.py  test_roles.py  test_service_catalog.py  test_services.py  test_shell.py  test_tenants.py  test_tokens.py  test_users.py  utils.py
tests/v3/: client_fixtures.py  test_access.py  test_auth.py  test_client.py  test_credentials.py  test_discover.py  test_domains.py  test_endpoints.py  test_groups.py  test_policies.py  test_projects.py  test_roles.py  test_service_catalog.py  test_services.py  test_trusts.py  test_users.py  utils.py
tools/: debug_helper.sh  install_venv.py  install_venv_common.py  keystone.bash_completion  pip-requires  test-requires
(+252 files in other folders)
