[metadata]
name = python-keystoneclient
summary = Client Library for OpenStack Identity
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    keystoneclient

[entry_points]
console_scripts =
    keystone = keystoneclient.shell:main

keystoneclient.auth.plugin =
    v2password = keystoneclient.auth.identity.v2:Password
    v2token = keystoneclient.auth.identity.v2:Token
    v3password = keystoneclient.auth.identity.v3:Password
    v3token = keystoneclient.auth.identity.v3:Token
    v3unscopedsaml = keystoneclient.contrib.auth.v3.saml2:Saml2UnscopedToken
    v3scopedsaml = keystoneclient.contrib.auth.v3.saml2:Saml2ScopedToken

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = keystoneclient/locale
domain = keystoneclient

[update_catalog]
domain = keystoneclient
output_dir = keystoneclient/locale
input_file = keystoneclient/locale/keystoneclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystoneclient/locale/keystoneclient.pot

[wheel]
universal = 1
