[metadata]
name = python-keystoneclient
summary = Client Library for OpenStack Identity
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-keystoneclient/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    keystoneclient

[entry_points]
keystoneclient.auth.plugin =
    password = keystoneclient.auth.identity.generic:Password
    token = keystoneclient.auth.identity.generic:Token
    admin_token = keystoneclient.auth.token_endpoint:Token
    v2password = keystoneclient.auth.identity.v2:Password
    v2token = keystoneclient.auth.identity.v2:Token
    v3password = keystoneclient.auth.identity.v3:Password
    v3token = keystoneclient.auth.identity.v3:Token
    v3oidcpassword = keystoneclient.contrib.auth.v3.oidc:OidcPassword
    v3unscopedsaml = keystoneclient.contrib.auth.v3.saml2:Saml2UnscopedToken
    v3scopedsaml = keystoneclient.contrib.auth.v3.saml2:Saml2ScopedToken
    v3unscopedadfs = keystoneclient.contrib.auth.v3.saml2:ADFSUnscopedToken

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  setup.py
  keystoneclient/tests/

